frontend/scss/organisms/_o-pinboard.scss
.o-pinboard {
  position: relative;
  padding-top: 0.02px;
  border-top: 1px solid $color__rules--primary;

}

.m-title-bar + .o-pinboard {
  margin-top: 19px;

  &:first-child {
    margin-top: 0;
  }

  @include breakpoint('small+') {
    margin-top: 36px;

    &:first-child {
      margin-top: 0;
    }
  }

  @include breakpoint('medium+') {
    margin-top: 40px;

    &:first-child {
      margin-top: 0;
    }
  }
}

.m-links-bar + .o-pinboard {
  margin-top: 0;
}

.m-search-actions + .o-pinboard {
  margin-top: 20px;
}

.o-pinboard::before,
.o-pinboard::after {
  content: '';
  display: none;
  position: absolute;
  z-index: 0;
  top: 0;
  bottom: 0;
  width: 1px;
  background-color: $color__rules--tertiary;
  pointer-events: none;
}

.o-pinboard > *::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  height: 1px;
  background-color: $color__rules--primary;
  pointer-events: none;
}

.o-pinboard > *:first-child {
  padding-top: 0;

  &::before {
    content: none;
    display: none;
  }
}

.o-pinboard__footer {
  margin-top: 40px;
  padding-top: 25px;
  border-top: 1px solid $color__rules--primary;

  @include breakpoint('small+') {
    margin-top: 0;
  }
}

// Margin-top on first item adds extra space to all items, see pinboard.js#L66
@each $name, $point in $breakpoints {
  @include breakpoint('#{$name}') {
    .o-pinboard > * {
      @if ($name == 'xsmall') {
        margin-top: 56px;

        &:first-child:not(.s-positioned) {
          margin-top: 16px;
        }
      }
      padding-top: colspan(map-get($grid-padding-tops, $name), #{$name});
    }

    .o-pinboard[class*="col@#{$name}"] {
      display: flex;
      flex-flow: row wrap;
      align-items: flex-start;
      justify-content: space-between;
      padding-top: 0;
    }

    .o-pinboard[class*="col@#{$name}"] > * {
      left: 0;
      top: 0;
      flex: 0 0 auto;
      @if ($name == 'xsmall') {
        margin-top: #{map-get($pinboard-grid-margin-tops, $name)}px;
        padding-top: #{map-get($pinboard-grid-padding-tops, $name)}px;
      } @elseif ($name == 'small') {
        margin-top: colspan(1.5, small);
        padding-top: colspan(1.5, small, -1px);
        border-top: 1px solid $color__rules--primary;
      } @else {
        margin-top: #{map-get($pinboard-grid-margin-tops, $name)}px;
        padding-top: #{map-get($pinboard-grid-padding-tops, $name) - 1}px;
        border-top: 1px solid $color__rules--primary;
      }
      opacity: 0;
      transition: opacity .25s;

      &::before {
        content: none;
        display: none;
      }
    }

    // Override margin-top to match padding-top for all
    .o-pinboard.o-pinboard--home[class*="col@#{$name}"] > * {
      margin-top: colspan(map-get($grid-padding-tops, $name), #{$name});
    }

    .o-pinboard[class*="col@#{$name}"] >.m-listing--variable-height {
      @if ($name == 'xsmall') {
        margin-top: 32px;
      }
      @if ($name == 'small') {
        margin-top: 60px;
      }
    }

    .o-pinboard[class*="col@#{$name}"] > .s-positioned {
      position: absolute;
      z-index: 1;
      flex: none;
      opacity: 1;
      transition: top .3s $bezier--marius-mosaic, left .3s $bezier--marius-mosaic, height .3s $bezier--marius-mosaic;
    }

    .o-pinboard[class*="col@#{$name}"] > .s-positioned:not(.s-repositioning) {
      margin-top: 0;
    }

    .o-pinboard[class*="col@#{$name}"] > *:nth-child(1) { transition-delay: .1s; }
    .o-pinboard[class*="col@#{$name}"] > *:nth-child(2) { transition-delay: .2s; }
    .o-pinboard[class*="col@#{$name}"] > *:nth-child(3) { transition-delay: .3s; }
    .o-pinboard[class*="col@#{$name}"] > *:nth-child(4) { transition-delay: .4s; }
    .o-pinboard[class*="col@#{$name}"] > *:nth-child(5) { transition-delay: .5s; }
    .o-pinboard[class*="col@#{$name}"] > *:nth-child(6) { transition-delay: .6s; }
    .o-pinboard[class*="col@#{$name}"] > *:nth-child(7) { transition-delay: .7s; }
    .o-pinboard[class*="col@#{$name}"] > *:nth-child(7) ~ * { transition-delay: .8s; }
  }
}

@include breakpoint('xsmall') {
  .o-pinboard--2-col\@xsmall::before {
    //display: block;
    //left: colspan(29, xsmall);
  }

  .o-pinboard--2-col\@xsmall > * {
    width: colspan(grid-cols-to-colspan(2), 'xsmall');
  }

  .o-pinboard--2-col\@xsmall > *:nth-child(1),
  .o-pinboard--2-col\@xsmall > *:nth-child(2) {
    border-top-color: transparent;
  }
}

@include breakpoint('small') {
  .o-pinboard--2-col\@small::before {
    //display: block;
    //left: colspan(29, small);
  }

  .o-pinboard--2-col\@small > * {
    width: colspan(grid-cols-to-colspan(2), 'small');
  }

  .o-pinboard--2-col\@small > *:nth-child(1),
  .o-pinboard--2-col\@small > *:nth-child(2) {
    border-top-color: transparent;
  }
}

@include breakpoint('medium') {
  .o-pinboard--2-col\@medium::before {
    display: block;
    left: colspan(19, medium);
  }

  .o-pinboard--2-col\@medium > * {
    width: colspan(grid-cols-to-colspan(2), 'medium');
  }

  .o-pinboard--3-col\@medium::before {
    display: block;
    left: colspan(19, medium);
  }

  .o-pinboard--3-col\@medium::after {
    display: block;
    left: colspan(39, medium);
  }

  .o-pinboard--3-col\@medium > * {
    width: colspan(grid-cols-to-colspan(3), 'medium');
  }

  .o-pinboard--2-col\@medium > *:nth-child(1),
  .o-pinboard--2-col\@medium > *:nth-child(2),
  .o-pinboard--3-col\@medium > *:nth-child(1),
  .o-pinboard--3-col\@medium > *:nth-child(2),
  .o-pinboard--3-col\@medium > *:nth-child(3) {
    border-top-color: transparent;
  }
}

@include breakpoint('large') {
  .o-pinboard--2-col\@large::before {
    display: block;
    left: colspan(19, large);
  }

  .o-pinboard--2-col\@large > * {
    width: colspan(grid-cols-to-colspan(2), 'large');
  }

  .o-pinboard--3-col\@large::before {
    display: block;
    left: colspan(19, large);
  }

  .o-pinboard--3-col\@large::after {
    display: block;
    left: colspan(39, large);
  }

  .o-pinboard--3-col\@large > * {
    width: colspan(grid-cols-to-colspan(3), 'large');
  }

  .o-pinboard--4-col\@large::before {
    display: block;
    left: colspan(14, large);
    width: colspan(15, large);
    border-right: 1px solid $color__rules--tertiary;
    border-left: 1px solid $color__rules--tertiary;
    background: transparent;
  }

  .o-pinboard--4-col\@large::after {
    display: block;
    left: colspan(44, large);
  }

  .o-pinboard--4-col\@large > * {
    width: colspan(grid-cols-to-colspan(4), 'large');
  }

  .o-pinboard--2-col\@large > *:nth-child(1),
  .o-pinboard--2-col\@large > *:nth-child(2),
  .o-pinboard--3-col\@large > *:nth-child(1),
  .o-pinboard--3-col\@large > *:nth-child(2),
  .o-pinboard--3-col\@large > *:nth-child(3),
  .o-pinboard--4-col\@large > *:nth-child(1),
  .o-pinboard--4-col\@large > *:nth-child(2),
  .o-pinboard--4-col\@large > *:nth-child(3),
  .o-pinboard--4-col\@large > *:nth-child(4) {
    border-top-color: transparent;
  }
}

@include breakpoint('xlarge') {
  .o-pinboard--2-col\@xlarge::before {
    display: block;
    left: colspan(19, xlarge);
  }

  .o-pinboard--2-col\@xlarge > * {
    width: colspan(grid-cols-to-colspan(2), 'xlarge');
  }

  .o-pinboard--3-col\@xlarge::before {
    display: block;
    left: colspan(19, xlarge);
  }

  .o-pinboard--3-col\@xlarge::after {
    display: block;
    left: colspan(39, xlarge);
  }

  .o-pinboard--3-col\@xlarge > * {
    width: colspan(grid-cols-to-colspan(3), 'xlarge');
  }

  .o-pinboard--4-col\@xlarge::before {
    display: block;
    left: colspan(14, xlarge);
    width: colspan(15, xlarge);
    border-right: 1px solid $color__rules--tertiary;
    border-left: 1px solid $color__rules--tertiary;
    background: transparent;
  }

  .o-pinboard--4-col\@xlarge::after {
    display: block;
    left: colspan(44, xlarge);
  }

  .o-pinboard--4-col\@xlarge > * {
    width: colspan(grid-cols-to-colspan(4), 'xlarge');
  }

  .o-pinboard--2-col\@xlarge > *:nth-child(1),
  .o-pinboard--2-col\@xlarge > *:nth-child(2),
  .o-pinboard--3-col\@xlarge > *:nth-child(1),
  .o-pinboard--3-col\@xlarge > *:nth-child(2),
  .o-pinboard--3-col\@xlarge > *:nth-child(3),
  .o-pinboard--4-col\@xlarge > *:nth-child(1),
  .o-pinboard--4-col\@xlarge > *:nth-child(2),
  .o-pinboard--4-col\@xlarge > *:nth-child(3),
  .o-pinboard--4-col\@xlarge > *:nth-child(4) {
    border-top-color: transparent;
  }
}

.o-pinboard--home {

  .m-listing__meta {
    padding-left: 24px;
    padding-right: 24px;
    padding-bottom: 64px;
    padding-top: 36px;

    .f-tag {
      margin-top: 0px;
    }
  }

  .m-listing--selection .m-listing__meta {
    background-color: #f3f3f3;
    .f-tag {
      color: #008085;
    }
  }
  .m-listing--article .m-listing__meta {
    background-color: #cccccc;
    .f-tag {
      color: #083f6e;
    }
  }

}

